--- a/Views/LoginAndRegister/Index.cshtml
+++ b/Views/LoginAndRegister/Index.cshtml
@@ -22,7 +22,7 @@
         </h1>
         <h4 class="header__h4">A simpler animal hoteling for simpler life</h4>
         <button class="txt-btn btn__learn-more">Learn more &#8595;</button>
-        <img class="header__img" src="/img/image_placeholder.png" alt="Header Image">
+        <img class="header__img" src="~/img/19198463.jpg" alt="Header Image">
     </header>
     <section id="section--1">
 
