--- a/Views/Shared/_NoLoginLayout.cshtml
+++ b/Views/Shared/_NoLoginLayout.cshtml
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="/css/site.css">
 
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;1,400&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="/img/image_placeholder.png">
+    <link rel="shortcut icon" href="~/img/HotelLogo.png"/>
 
     <script defer type="module" src="/js/site.js"></script>
     @if (IsSectionDefined("ScriptsAndStylesheets"))
@@ -23,7 +23,7 @@
 <body>
     <nav class="nav">
         <a class="nav__logo--wrapper" asp-action="Index" asp-controller="AnimalHotel">
-            <img class="nav__logo" src="/img/image_placeholder.png" alt="Animal Hotel Home Image">
+            <img class="nav__logo" src="~/img/HotelLogo.png" alt="Animal Hotel Home Image">
             <span class="nav__title">Animal Hotel</span>
         </a>
         <ul class="nav__items">
@@ -81,7 +81,7 @@
                         <a class="footer__link">Contact Us</a>
                     </li>
                 </ul>
-                <img class="footer__logo" src="/img/image_placeholder.png" alt="Footer Logo Image">
+                <img class="footer__logo" src="~/img/HotelLogo.png" alt="Footer Logo Image">
 
                 <div class="copyright__info">
                     &#169; This is a course project made by
