--- a/wwwroot/css/animals.css
+++ b/wwwroot/css/animals.css
@@ -111,7 +111,7 @@
   transform: translate(-50%, -50%);
   background-color: whitesmoke;
   width: calc(var(--index) * 22);
-  height: calc(var(--index) * 28);
+  height: calc(var(--index) * 32);
   box-shadow: 0 4rem 6rem rgba(0, 0, 0, 0.3);
   transition: all 0.5s;
   z-index: 200;
@@ -281,4 +281,76 @@
 
 .btn__mt {
   margin-top: 2%;
+}
+
+.room__animal-page {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-height: calc(var(--index));
+}
+
+.ranimal_modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: whitesmoke;
+  width: calc(var(--index) * 26);
+  height: calc(var(--index) * 25);
+  box-shadow: 0 4rem 6rem rgba(0, 0, 0, 0.3);
+  transition: all 0.5s;
+  z-index: 200;
+  padding: calc(var(--index) * 3) calc(var(--index) * 2);
+}
+
+.room_animals-header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+
+.room__animal-wrapper {
+  text-decoration: none;
+  color: var(--color-dark);
+  background-color: white;
+  border-radius: calc(var(--index));
+  box-shadow: var(--base-shadow);
+  overflow: hidden;
+  height: calc(var(--index) * 14);
+  width: calc(var(--index) * 11);
+  margin-top: 2%;
+}
+
+.room_animal-els-wrapper {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 2fr;
+  column-gap: 2%;
+  width: 100%;
+  margin-top: 2%;
+}
+
+.ra_column {
+  display: grid;
+  grid-row: 1/4;
+}
+
+.ra_row {
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+}
+
+.prefer_row {
+  margin-top: 4%;
+  display: grid;
+  grid-column: 1/3;
+  grid-template-rows: 0.6fr 2fr;
+}
+
+.pointer {
+  cursor: pointer;
 }
