--- a/wwwroot/css/rooms.css
+++ b/wwwroot/css/rooms.css
@@ -625,3 +625,88 @@ a.disabled {
   column-gap: 2%;
   margin: 8% 0%;
 }
+
+.ar_rooms-page {
+  width: 100%;
+  min-height: calc(var(--index) * 10);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.ar_rooms-page {
+}
+
+.ar_rooms-header {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  margin: 2% 0%;
+}
+
+.ar_header {
+  font-weight: 500;
+  font-size: 1.5rem;
+}
+
+.ar_room-cont {
+  height: calc(var(--index) * 7);
+}
+
+.no_romms-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 10%;
+  justify-content: center;
+}
+
+.no_rooms-img {
+  height: calc(var(--index) * 5);
+  width: calc(var(--index) * 5);
+}
+
+.no_rooms-title {
+  font-size: 2rem;
+  font-weight: 500;
+  text-align: center;
+  margin-top: 6%;
+  line-height: 200%;
+  letter-spacing: 3.5px;
+}
+
+.mt2 {
+  margin-top: 2%;
+}
+
+.room_encs-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.enc_room-btns-wrapper {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-top: 5%;
+  justify-content: flex-start;
+}
+
+.enc_occupied-msg {
+  margin-top: 10%;
+  font-size: 0.9rem;
+  font-weight: 500;
+  letter-spacing: 2px;
+}
+
+.bkng-add-btn {
+  margin-top: 2%;
+}
+
+.rg10 {
+  row-gap: 10%;
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr;
+  grid-row: 1/4;
+}
